--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ jq = "^1.7.0"
 duckdb = "^1.0.0"
 rich = "^13.7.1"
 platformdirs = "^4.2.2"
+pandas = "^2.2.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
