--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ pandas = "^2.2.2"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
 ruff = "^0.5.6"
+pytest-cov = "^5.0.0"
+pytest-github-actions-annotate-failures = "^0.2.0"
 
 [build-system]
 requires = ["poetry-core"]
