--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ pytest = "^8.3.2"
 ruff = "^0.5.6"
 pytest-cov = "^5.0.0"
 pytest-github-actions-annotate-failures = "^0.2.0"
+litecli = "^1.11.0"
 
 [build-system]
 requires = ["poetry-core"]
