--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ duckdb = "^1.0.0"
 rich = "^13.7.1"
 platformdirs = "^4.2.2"
 pandas = "^2.2.2"
+tiktoken = "^0.7.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
