--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,4 +15,4 @@ jobs:
         - uses: actions/checkout@v3
         - name: Run Docker
           run: |
-            make test_linux
+            make docker_linux
