--- a/.gitignore
+++ b/.gitignore
@@ -175,6 +175,7 @@ pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python
 
-*.duckdb
-*.json
-*.sqlite
+.duckdb
+.json
+.sqlite
+.csv
