--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             },
             "args": [
                 "sync",
-                "--estimate-cost"
+                // "--estimate-cost"
             ],
         },
         {
