--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.x']
+        # https://devguide.python.org/versions/
+        python-version: ['3.9', '3.10', '3.11', '3.12']
         poetry-version: ['1.4.2']
         os: [ubuntu-latest] # , windows-latest]
     steps:
